--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,20 +7,26 @@
 <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-	<h1> Assignment-1 </h1>
-	<div>
-		<div1>
-			<h2> section1 </h2>
-			<p> content </p>
-		</div1>
-		<div2>
-			<h2> section2 </h2>
-			<p> content </p>
-		</div2>
-		<div3>
-			<h2> section3 </h2>
-			<p> content and more content </p>
-		</div3>
+<h1> The 3 R's </h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="box" id="box1">
+		<h2 class="sections" id="section1"> Reduce </h2>
+		<p class="content"> "Reduce" means using fewer resources in the first place. This is the most effective of the three Rs and the place to begin. It is also the hardest because it requires letting go of some very American notions, including the bigger the better, new trumps old and convenience is next to godliness. </p>
 	</div>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div class="box" id="box2">
+		<h2 class="sections" id="section2"> Reuse </h2>
+		<p class="content"> Before you recycle or dispose of anything, consider whether it has life left in it. A jam jar can store leftovers. Food scraps can become compost. An old shirt can become a pajama top. Reusing keeps new resources from being used for a while longer, and old resources from entering the waste stream. </p>
+	</div>
+	</div>
+	<div class="col-lg-4 col-md-12 col-sm-12">
+		<div class="box" id="box3">
+		<h2 class="sections" id="section3"> Recycle </h2>
+		<p class="content"> Recycling is the "R" that has caught on the best. Partly, this is because there are so many curbside recycling programs today, which makes recycling so easy. What keeps it from being a total piece of cake is the rules. Every municipality has its own, and they are not always as straightforward as it could be. </p>
+	</div>
+	</div>
+</div>
 </body>
 </html>
