--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1> Coursera Review </h1>
-Coursera is so COOL! I am learning SO much!
+    <div> Coursera is so COOL! I am learning SO much! </div>
 </body>
 </html>
